--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -50,7 +50,7 @@
 
     <ImageView
         android:clickable="true"
-        android:id="@+id/imageView4"
+        android:id="@+id/img_salir"
         android:layout_width="66dp"
         android:layout_height="55dp"
         android:layout_marginStart="10dp"
