--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_background" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/img_salir"
         android:layout_width="66dp"
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
