--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#FF0F03</color>
     <color name="colorPrimaryDark">#F10B00</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#FED100</color>
 
     <color name="blanco">#FFF</color>
     <color name="negro">#000</color>
