--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/img_logo"
         android:layout_width="match_parent"
         android:layout_height="223dp"
         app:srcCompat="@drawable/ic_deliveryman"
@@ -37,6 +37,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_background" />
+    <TextView
+        android:id="@+id/tv_iphost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#F61004"
+        android:fontFamily="@font/nimbusbol"
+        android:gravity="center"
+        android:letterSpacing="0.1"
+        android:text="ip host"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="15sp"/>
 
     <EditText
         android:id="@+id/et_user_login"
