--- a/app/src/main/res/layout/dialog_iphost.xml
+++ b/app/src/main/res/layout/dialog_iphost.xml
@@ -10,7 +10,7 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:background="#FED100"
+        android:background="@color/rojo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,14 +29,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:layout_marginBottom="10dp"
         android:fontFamily="@font/nimbusbol"
-        android:text="¿Quieres Salir?"
+        android:text="¿Cúal es tu dirección ip?"
         android:textColor="@color/rojo"
         android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
+    <EditText
+        android:id="@+id/et_ip_host"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="15dp"
+        android:ems="10"
+        android:hint="192.168.XXX.XXX"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
 </androidx.constraintlayout.widget.ConstraintLayout>
