Implementación de clases para consumir servicios web

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,9 @@
     android:background="@color/colorPrimary"
     android:gravity="center"
     android:padding="10dp"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+
+    >
 
 
     <ImageView
