--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -60,7 +60,7 @@
         app:srcCompat="@drawable/ic_button_back" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tv_info_restaurant"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
