--- a/app/src/main/res/layout/item_categories.xml
+++ b/app/src/main/res/layout/item_categories.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
+    android:layout_margin="5dp"
     android:foreground="?android:attr/selectableItemBackground">
     <ImageView
         android:id="@+id/img_category"
