--- a/app/src/main/res/layout/item_restaurants.xml
+++ b/app/src/main/res/layout/item_restaurants.xml
@@ -15,12 +15,26 @@
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="false">
 
-    <ImageView
-        android:id="@+id/imv_restaurant"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_shopping_car"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/imv_restaurant"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_shopping_car"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"/>
+        <TextView
+            android:id="@+id/tv_nombre_restaruante"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Restaruante"
+            android:fontFamily="@font/nimbusreg"
+            android:textSize="15sp"
+            android:textAlignment="center"
+            android:layout_gravity="center"/>
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
