implementacion de las interfaz del carrito de compras

--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -64,9 +64,9 @@
                 android:id="@+id/btn_user_birth_day"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="15dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
                 android:background="@drawable/sty_border_editext"
                 android:drawableLeft="@drawable/ic_calendar"
                 android:drawablePadding="5dp"
@@ -189,7 +189,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:fontFamily="@font/nimbusbol"
                 android:gravity="center|center_vertical"
                 android:scrollbarThumbHorizontal="@color/negro"
