--- a/app/src/main/res/drawable-mdpi/btn_style7_green.xml
+++ b/app/src/main/res/drawable-mdpi/btn_style7_green.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/rojo"></solid>
-    <corners android:radius="12dp"></corners>
+    <solid android:color="#60EB09"></solid>
+
+    <corners android:radius="222dp"></corners>
 </shape>
