--- a/app/src/main/res/drawable/btn_style5_redondo.xml
+++ b/app/src/main/res/drawable/btn_style5_redondo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/rojo"></solid>
-    <corners android:radius="12dp"></corners>
+    <gradient android:angle="-90" android:startColor="#F10B00" android:endColor="#FFE14F"/>
+    <corners android:radius="360dp"></corners>
 </shape>
