--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -45,12 +45,10 @@
         android:layout_width="126dp"
         android:layout_height="90dp"
         android:layout_marginTop="64dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_deliveryman" />
 
     <ImageView
@@ -100,87 +98,89 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.323"
+        app:layout_constraintHorizontal_bias="0.187"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.936" />
+        app:layout_constraintVertical_bias="0.861" />
 
     <TextView
         android:id="@+id/textView15"
-        android:layout_width="91dp"
-        android:layout_height="22dp"
+        android:layout_width="107dp"
+        android:layout_height="23dp"
         android:fontFamily="@font/nimbusbol"
         android:text="$ 20.000"
         android:textColor="@color/negro"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.106"
+        app:layout_constraintHorizontal_bias="0.115"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.619" />
+        app:layout_constraintVertical_bias="0.593" />
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="279dp"
-        android:layout_height="75dp"
+        android:layout_width="293dp"
+        android:layout_height="78dp"
         android:fontFamily="@font/nimbusregita"
         android:text="Carne de res, pechuga de pollo, costilla de cerdo, papa criolla, morcillas, chorizos, rodajas de plátano, croquetas de yuca y papas a la francesa."
         android:textColor="@color/negro"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.31"
+        app:layout_constraintHorizontal_bias="0.305"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:layout_constraintVertical_bias="0.56" />
+        app:layout_constraintVertical_bias="0.493" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="25dp"
-        android:layout_height="22dp"
+        android:layout_width="19dp"
+        android:layout_height="26dp"
         android:background="@drawable/icon_minus"
-        app:layout_constraintBottom_toTopOf="@+id/textView16"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.606"
-        app:layout_constraintStart_toEndOf="@+id/textView15"
+        app:layout_constraintHorizontal_bias="0.655"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.957" />
+        app:layout_constraintVertical_bias="0.58" />
 
     <TextView
         android:id="@+id/quantity_of_products"
-        android:layout_width="20dp"
-        android:layout_height="25dp"
+        android:layout_width="32dp"
+        android:layout_height="40dp"
         android:text="1"
+        android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="@color/negro"
-        android:textSize="21sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
-        app:layout_constraintStart_toEndOf="@+id/button6"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.222" />
+        app:layout_constraintHorizontal_bias="0.728"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.583" />
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="22dp"
-        android:layout_height="23dp"
+        android:layout_width="21dp"
+        android:layout_height="24dp"
         android:background="@drawable/icon_plus"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.886"
+        app:layout_constraintHorizontal_bias="0.797"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.233" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.578" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="321dp"
         android:layout_height="166dp"
         android:background="@drawable/plato_parrillada"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.443"
+        app:layout_constraintHorizontal_bias="0.222"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_restaurant_product_bg"
-        app:layout_constraintVertical_bias="0.312" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.378" />
 </androidx.constraintlayout.widget.ConstraintLayout>
