--- a/app/src/main/res/layout/item_produc_car.xml
+++ b/app/src/main/res/layout/item_produc_car.xml
@@ -35,11 +35,14 @@
         android:id="@+id/textView13"
         android:layout_width="70dp"
         android:layout_height="20dp"
+        android:layout_marginTop="76dp"
         android:fontFamily="@font/nimbusbolta"
         android:text="Precio $ :"
         android:textColor="#090909"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="76dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/minius_product"
@@ -87,4 +90,5 @@
         app:layout_constraintHorizontal_bias="0.656"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
