--- a/app/src/main/res/layout/fragment_detail_products.xml
+++ b/app/src/main/res/layout/fragment_detail_products.xml
@@ -62,20 +62,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_button_back" />
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="371dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/btn_style1"
-        android:text="Agregar al carrito de compras"
-        android:textColor="@color/blanco"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/img_restaurant_product_bg"
-        app:layout_constraintVertical_bias="0.898" />
+    <!--
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/menu_options_nav"
         android:layout_width="0dp"
@@ -86,6 +73,22 @@
         app:menu="@menu/bottom_navigation">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+-->
+    <Button
+        android:id="@+id/btn_add_shopping_cart"
+        android:layout_width="371dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/btn_style1"
+        android:text="Agregar al carrito de compras"
+        android:textColor="@color/blanco"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/img_restaurant_product_bg"
+        app:layout_constraintVertical_bias="0.912" />
 
     <TextView
         android:id="@+id/textView14"
@@ -104,7 +107,7 @@
         app:layout_constraintVertical_bias="0.861" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/tv_precio"
         android:layout_width="107dp"
         android:layout_height="23dp"
         android:fontFamily="@font/nimbusbol"
@@ -119,7 +122,7 @@
         app:layout_constraintVertical_bias="0.593" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/tv_description"
         android:layout_width="293dp"
         android:layout_height="78dp"
         android:fontFamily="@font/nimbusregita"
@@ -133,7 +136,7 @@
         app:layout_constraintVertical_bias="0.493" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_minus"
         android:layout_width="19dp"
         android:layout_height="26dp"
         android:background="@drawable/icon_minus"
@@ -161,7 +164,7 @@
         app:layout_constraintVertical_bias="0.583" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/btn_add"
         android:layout_width="21dp"
         android:layout_height="24dp"
         android:background="@drawable/icon_plus"
