--- a/app/src/main/res/layout/fragment_shoppingcar.xml
+++ b/app/src/main/res/layout/fragment_shoppingcar.xml
@@ -9,6 +9,7 @@
 
 
     <TextView
+        android:id="@+id/tv_prueba"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/nimbusbolta"
