--- a/app/src/main/res/layout/fragmen_map.xml
+++ b/app/src/main/res/layout/fragmen_map.xml
@@ -15,17 +15,16 @@
         android:text="Ingrese direcion o selecione en el anterior mapa"
         android:textColor="@color/negro"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.367"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapView"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintTop_toBottomOf="@+id/mapView" />
 
     <EditText
         android:id="@+id/direcion_envio"
-        android:layout_width="213dp"
-        android:layout_height="42dp"
+        android:layout_width="189dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/btn_style2"
         android:ems="10"
         android:fontFamily="@font/nimbusregita"
@@ -33,11 +32,11 @@
         android:text=" Direccion calle ** #**-**"
         android:textColor="#A19F9F"
         app:layout_constraintBottom_toTopOf="@+id/textView20"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.159"
+        app:layout_constraintEnd_toStartOf="@+id/Buscar"
+        app:layout_constraintHorizontal_bias="0.426"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.153" />
 
     <TextView
         android:id="@+id/textView20"
@@ -47,12 +46,10 @@
         android:text="Ingrese alguna observacion para el domiciliario( este campo no es obligatorio)"
         android:textColor="@color/negro"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.337"
+        app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapView"
-        app:layout_constraintVertical_bias="0.542" />
+        tools:layout_editor_absoluteY="418dp" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
@@ -67,10 +64,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:layout_constraintVertical_bias="0.423" />
+        app:layout_constraintVertical_bias="0.116" />
 
     <Button
         android:id="@+id/button5"
@@ -84,9 +81,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapView"
-        app:layout_constraintVertical_bias="0.974" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/menu_options_nav"
@@ -103,28 +98,25 @@
         android:id="@+id/mapView"
         android:layout_width="416dp"
         android:layout_height="298dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/mapa"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Buscar"
-        android:layout_width="104dp"
-        android:layout_height="44dp"
+        android:layout_width="106dp"
+        android:layout_height="37dp"
+        android:layout_marginEnd="68dp"
         android:background="@drawable/btn_style1"
         android:drawableLeft="@drawable/icono_lupa"
         android:fontFamily="@font/nimbusbol"
         android:text="Buscar"
         android:textColor="@color/blanco"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/textView20"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.273"
-        app:layout_constraintStart_toEndOf="@+id/direcion_envio"
-        app:layout_constraintTop_toBottomOf="@+id/mapView"
-        app:layout_constraintVertical_bias="0.305" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
