Se solucionó el problema de AdMod. Esta app tiene integrada la interfaz de Dirección de cuasapud

--- a/app/src/main/res/layout/fragment_cash.xml
+++ b/app/src/main/res/layout/fragment_cash.xml
@@ -56,7 +56,7 @@
         android:layout_width="293dp"
         android:layout_height="73dp"
         android:background="@drawable/btn_style1"
-        android:drawableLeft="@drawable/icono_inero"
+        android:drawableLeft="@drawable/icono_dinero"
         android:text="pago conra entrega"
         android:textColor="#F8F3F3"
         app:layout_constraintBottom_toTopOf="@+id/button8"
