--- a/app/src/main/res/layout/fragment_shoppingcar.xml
+++ b/app/src/main/res/layout/fragment_shoppingcar.xml
@@ -33,5 +33,13 @@
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
+    <Button
+        android:id="@+id/btn_goto_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dirección"
+        app:layout_constraintBottom_toTopOf="@+id/menu_options_nav"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
