--- a/app/src/main/res/layout/fragment_order_address.xml
+++ b/app/src/main/res/layout/fragment_order_address.xml
@@ -9,100 +9,94 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="324dp"
-        android:layout_height="35dp"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="@font/nimbusbol"
         android:text="Ingrese direcion o selecione en el anterior mapa"
         android:textColor="@color/negro"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.367"
+        app:layout_constraintHorizontal_bias="0.316"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/container"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintTop_toBottomOf="@+id/container" />
 
     <EditText
         android:id="@+id/direcion_envio"
-        android:layout_width="213dp"
-        android:layout_height="42dp"
+        android:layout_width="189dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/btn_style2"
         android:ems="10"
         android:fontFamily="@font/nimbusregita"
+        android:hint=" calle **  #**-**  Barrio,conjunto "
         android:inputType="textPersonName"
-        android:text=" Direccion calle ** #**-**"
-        android:textColor="#A19F9F"
-        app:layout_constraintBottom_toTopOf="@+id/textView20"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.159"
+        android:textColor="#000000"
+        android:textColorHighlight="#0B0909"
+        android:textColorHint="#8C8A8A"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/container"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView20"
-        android:layout_width="318dp"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="@font/nimbusbol"
         android:text="Ingrese alguna observacion para el domiciliario( este campo no es obligatorio)"
         android:textColor="@color/negro"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.337"
+        app:layout_constraintHorizontal_bias="0.36"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/container"
-        app:layout_constraintVertical_bias="0.542" />
+        app:layout_constraintTop_toBottomOf="@+id/direcion_envio" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
-        android:layout_width="318dp"
-        android:layout_height="67dp"
+        android:layout_width="0dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/btn_style2"
         android:ems="10"
         android:fontFamily="@font/nimbusregita"
+        android:hint="  Descripcion para el domiciliario "
         android:inputType="textPersonName"
-        android:text="  Descripcion para el domiciliario "
-        android:textColor="#807979"
+        android:textColor="#090909"
+        android:textColorHint="#6C6A6A"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:layout_constraintVertical_bias="0.423" />
+        app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="371dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/btn_style1"
         android:text="Agregar direccón "
         android:textColor="@color/blanco"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/container"
-        app:layout_constraintVertical_bias="0.969" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/menu_options_nav"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation">
 
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <FrameLayout
         android:id="@+id/container"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="298dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -110,18 +104,18 @@
 
     <Button
         android:id="@+id/Buscar"
-        android:layout_width="104dp"
-        android:layout_height="44dp"
+        android:layout_width="110dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/btn_style1"
         android:drawableLeft="@drawable/icono_lupa"
         android:fontFamily="@font/nimbusbol"
         android:text="Buscar"
         android:textColor="@color/blanco"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.273"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/direcion_envio"
-        app:layout_constraintTop_toBottomOf="@+id/container"
-        app:layout_constraintVertical_bias="0.305" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
